Remove H2 database dependency and update test configuration for PostgreSQL

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -8,6 +8,22 @@ on:
 jobs:
   build:
     runs-on: [ubuntu-latest]
+    
+    services:
+      postgres:
+        image: postgres:14
+        env:
+          POSTGRES_DB: nightoutdb_test
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+          
     steps:
       - name: Checkout
         uses: actions/checkout@main
@@ -16,8 +32,12 @@ jobs:
         with:
           distribution: "temurin"
           java-version: "17"
-      - name: Build
-        run: mvn clean install
+      - name: Build and Test
+        run: mvn clean package
+        env:
+          SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/nightoutdb_test
+          SPRING_DATASOURCE_USERNAME: postgres
+          SPRING_DATASOURCE_PASSWORD: postgres
       - name: Docker Login
         run: |
           docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
