Refactor database schema to remove unnecessary fields from favorites table and streamline initialization. Update CI/CD workflow to ensure proper database setup with new sequences for user and favorite IDs.

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -99,15 +99,22 @@ jobs:
             
             # Initialize the database schema
             sudo docker exec nightout-postgres psql -U postgres -d nightoutdb -c "
-            -- Create sequence for user IDs
+            -- Create sequences
             CREATE SEQUENCE IF NOT EXISTS user_id_seq
                 INCREMENT 1
                 START 1
                 MINVALUE 1
                 MAXVALUE 9223372036854775807
                 CACHE 1;
+
+            CREATE SEQUENCE IF NOT EXISTS favorite_id_seq
+                INCREMENT 1
+                START 1
+                MINVALUE 1
+                MAXVALUE 9223372036854775807
+                CACHE 1;
                 
-            -- Create users table with latitude and longitude
+            -- Create users table
             CREATE TABLE IF NOT EXISTS users (
                 id BIGINT NOT NULL DEFAULT nextval('user_id_seq'),
                 name VARCHAR(255) NOT NULL,
@@ -118,6 +125,19 @@ jobs:
                 latitude DOUBLE PRECISION DEFAULT 0.0,
                 longitude DOUBLE PRECISION DEFAULT 0.0,
                 CONSTRAINT users_pkey PRIMARY KEY (id)
+            );
+
+            -- Create favorites table
+            CREATE TABLE IF NOT EXISTS favorites (
+                id BIGINT NOT NULL DEFAULT nextval('favorite_id_seq'),
+                user_id BIGINT NOT NULL,
+                location_id VARCHAR(255) NOT NULL,
+                latitude DOUBLE PRECISION NOT NULL,
+                longitude DOUBLE PRECISION NOT NULL,
+                created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
+                CONSTRAINT favorites_pkey PRIMARY KEY (id),
+                CONSTRAINT favorites_user_fk FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE,
+                CONSTRAINT favorites_unique_user_location UNIQUE (user_id, location_id)
             );"
             
         - name: Pull Docker Image
@@ -137,7 +157,8 @@ jobs:
               -e SPRING_DATASOURCE_USERNAME=postgres \
               -e SPRING_DATASOURCE_PASSWORD=postgres \
               -e SPRING_JPA_HIBERNATE_DDL_AUTO=none \
-              -e SPRING_SQL_INIT_MODE=never \
+              -e SPRING_SQL_INIT_MODE=always \
+              -e SPRING_SQL_INIT_CONTINUE_ON_ERROR=true \
               -p 8080:8080 \
               zachholt/nightout-backend:latest
               
