Update AIController and AIService to change chat endpoint to /v2/serve, enhance error handling, and add SSL configuration for secure API communication. Introduce netty-handler dependency in pom.xml for improved HTTP client capabilities.

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,10 @@
 			<artifactId>reactor-netty</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-handler</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
