--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -32,3 +32,8 @@ spring:
 
 server:
   port: 8080
+
+ai:
+  api:
+    url: https://lisa-rest-2067001295.us-east-1.elb.amazonaws.com
+    token: test_token
