Enhance WebClient configuration with extended timeouts and increased buffer size for streaming responses. Update ChatController to stream raw responses directly and remove unnecessary parsing logic. Adjust application.yaml to set max in-memory size for codecs.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -29,6 +29,8 @@ spring:
       mode: always
       schema-locations: classpath:schema.sql
       continue-on-error: true
+  codec:
+    max-in-memory-size: 10MB
 
 server:
   port: 8080
