Update CI/CD workflow to use the main branch of actions/upload-artifact for uploading test results, ensuring compatibility with the latest features and improvements.

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -42,7 +42,7 @@ jobs:
           SPRING_DATASOURCE_PASSWORD: postgres
       - name: Upload Test Results
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@main
         with:
           name: test-results
           path: |
