Refactor Dockerfile to streamline build process by removing unnecessary dependency download step and update CI/CD workflow to run 'mvn clean package' instead of 'mvn clean verify', simplifying the build and test steps.

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -32,27 +32,12 @@ jobs:
         with:
           distribution: "temurin"
           java-version: "17"
-          cache: 'maven'
       - name: Build and Test
-        run: mvn clean verify
+        run: mvn clean package
         env:
-          SPRING_PROFILES_ACTIVE: test
           SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/nightoutdb_test
           SPRING_DATASOURCE_USERNAME: postgres
           SPRING_DATASOURCE_PASSWORD: postgres
-      - name: Upload Test Results
-        if: always()
-        uses: actions/upload-artifact@main
-        with:
-          name: test-results
-          path: |
-            **/target/surefire-reports/**
-            **/target/site/jacoco/**
-      - name: Check Test Coverage
-        run: |
-          echo "Checking test coverage..."
-          COVERAGE=$(mvn jacoco:report | grep -A 1 "Line coverage" | tail -n 1 | sed -e 's/^[[:space:]]*//' -e 's/[[:space:]]*$//')
-          echo "Line coverage: $COVERAGE"
       - name: Docker Login
         run: |
           docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
