Update CI/CD workflow to set environment variables for PostgreSQL configuration and modify application-test.yaml to use environment variables for datasource settings. Add @Primary annotation to UserRepository for bean management.

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -35,9 +35,12 @@ jobs:
       - name: Build and Test
         run: mvn clean package
         env:
+          SPRING_PROFILES_ACTIVE: test
           SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/nightoutdb_test
           SPRING_DATASOURCE_USERNAME: postgres
           SPRING_DATASOURCE_PASSWORD: postgres
+          SPRING_DATASOURCE_DRIVER: org.postgresql.Driver
+          SPRING_JPA_DATABASE_PLATFORM: org.hibernate.dialect.PostgreSQLDialect
       - name: Docker Login
         run: |
           docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
